--- a/user/templates/user_panel.html
+++ b/user/templates/user_panel.html
@@ -4,8 +4,8 @@
 <div class="">
     <ul class="list-group">
         <li class="list-group-item"><a href="/user" class=""> User Profile</a></li>
-        <li class="list-group-item"><a href="" class=""> My Comments</a></li>
-        <li class="list-group-item"><a href="" class=""> My Contents</a></li>
+        <li class="list-group-item"><a href="/user/comments" class="">Comments</a></li>
+        <li class="list-group-item"><a href="" class="">Contents</a></li>
         <li class="list-group-item"><a href="/logout" class=""> Logout</a></li>
     </ul>
 </div>
