--- a/user/templates/user_contents.html
+++ b/user/templates/user_contents.html
@@ -64,6 +64,7 @@
                                 <th scope="col">Title</th>
                                 <th scope="col">Type</th>
                                 <th scope="col">Menu</th>
+                                <th scope="col">Gallery</th>
                                 <th scope="col">Status</th>
                                 <th scope="col">Date</th>
                                 <th scope="col">Detail</th>
@@ -80,6 +81,9 @@
                                     <td class="align-middle"><a href="/content/{{ rs.id }}/{{ rs.slug }}"><strong>{{ rs.title }}</strong></a></td>
                                     <td class="align-middle">{{ rs.type }}</td>
                                     <td class="align-middle">{{ rs.menu.title }}</td>
+                                    <td class="align-middle">
+                                        <a class="btn btn-primary" href="javascript:;" onclick="window.open('/user/contentaddimage/{{ rs.id }}', 'gallery', 'height=600,width=800,top=50,left=150')">Gallery</a>
+                                    </td>
                                     <td class="align-middle">{{ rs.status }}</td>
                                     <td class="align-middle">{{ rs.create_at }}</td>
                                     <td class="align-middle">
